# OurHomeVR

./: .gitignore  L0_acknowledgment_template.json  README.md  SavedBlake.json  WispsCpp.uproject  pstas_cat_reference.json  pstast_core_config.h
.jules/: prompt.json
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultGameplayTags.ini  DefaultProject.ini
Content/: BFL_Plant.uasset  BP_Plant_Oak.uasset  EmptyLevel.umap  GMGarden.uasset  LevelTest.umap  LevelTest_HLOD0_Instancing.uasset
Content/Actors/: BFI_Pawn.uasset  BP_Dragon.uasset  BP_GardenGridManager.uasset  BasicCharacter.uasset  Bp_Soil.uasset  CharacterClassBFL.uasset  MyWispPawn.uasset
Content/Actors/Buildings/: BP_Fence.uasset
Content/Actors/Soil/: BP_Clay.uasset  BP_GardenSoil.uasset
Content/Developers/: IA_DefaultAction.uasset
Content/Twitch/: TwitchConnect.uasset
Plugins/LLMGovernancePlugin/: LLMGovernancePlugin.uplugin
Plugins/SplinePlugin/: SplinePlugin.uplugin
Plugins/WispPlugin/: WispPlugin.uplugin
Source/: WispsCpp.Build.cs  WispsCpp.Target.cs  WispsCppEditor.Target.cs
Source/SymmetryKernel/: CMakeLists.txt  README.md
Source/SymmetryKernel/Private/: KernelPersistence.cpp  Main_Emulation.cpp  SymmetryKernel.cpp  SymmetryKernel.h
Source/SymmetryKernel/Public/: ISymmetryKernel.h  KernelPersistence.h  SymmetryBridge.h
Source/WispsCpp/: WispsCpp.Build.cs  WispsCpp.cpp  WispsCppCharacter.cpp  WispsCppCharacter.h  WispsCppGameMode.cpp  WispsCppGameMode.h
Source/WispsCpp/Private/: BFL_GridHelpers.cpp  BFL_Json.cpp  BasceClassAttributeComponent.cpp  BaseClassActor.cpp  BaseClassCharacter.cpp  FileImportLibrary.cpp  FileImporter.cpp  ImportExportDataTable.cpp  InteractionComponent.cpp  JsonUtility.cpp  PSTASimulator.cpp  SoilDataComponent.cpp
Source/WispsCpp/Public/: AWispPlayerController.h  BFL_GridHelpers.h  BFL_Json.h  BasceClassAttributeComponent.h  BaseClassActor.h  BaseClassCharacter.h  EOA_Executive_Interface.h  FileImportLibrary.h  GridDataComponent.h  ImportExportDataTable.h  Interactable.h  InteractionComponent.h  JsonUltility.h  JsonUtility.h  PSTASimulator.h  WispPawn.h  (+6 more)
(+250 files in other folders)
